fix: fix video width and link wraps in docs

--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -13,6 +13,11 @@
     transition: background-color 5000s;
   }
 
+  /* this fixes the fixed width video embeds in docs */
+  iframe {
+    @apply max-w-full;
+  }
+
   .with-medium-text {
     b {
       @apply font-medium text-gray-15;
